schema/testdata/errors/delete_operation_no_unique_lookup.keel
model MyModel {
    actions {
        //expect-error:16:29:ActionInputError:The action 'deleteMyModel' can only delete a single record and therefore must be filtered by unique fields
        delete deleteMyModel()
    }
}
